src/test/deca/syntax/parser/valid/cast_class_random.deca
// Cast test, in a syntax (we don't look at the context)

{
    A a = (anOtherClass) (object) ;
}