src/test/deca/syntax/parser/invalid/decl_var_type_symbole_brace.deca
// Parser test, type unavailable (bracket)

{
    { x = 5;
}